--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # Core dependencies
 openai>=1.0.0
+anthropic>=0.3.0
 python-dotenv>=0.19.0
 
 # User interface
@@ -7,8 +8,7 @@ questionary>=1.10.0
 rich>=10.11.0
 pyperclip>=1.8.2
 
-# Database
-sqlite3
+# Database (sqlite3 is built into Python)
 
 # EPUB processing
 ebooklib>=0.17.1
